Fix for spacing in info lines

--- a/style.less
+++ b/style.less
@@ -1,5 +1,7 @@
 .section-business-branding{
-	
+	h1, h2, h3, h4, h5, h6 {
+		margin: 0;
+	}
 	a.home.site-title{
 		display: block;
 		margin: .3em 0 .15em;
@@ -132,7 +134,7 @@
 			a{
 				width: 24px;
 				margin-left: 8px; 
-				opacity: 0.5;
+			//	opacity: 0.5;
 			}
 		}
 
